加入spark 和presto还有kafka